# PythonEA

./: .gitignore  pyproject.toml  requirements.txt
src/broker/: mt5_client.py
src/core/: config.py  logging.py
src/data/: feeds.py
src/risk/: position_sizing.py
src/scripts/: run_live.py
src/strategy/: base.py  breakout_close.py  donchian_breakout.py
