[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-ea"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
  "MetaTrader5>=5.0.45",
  "pandas>=2.2",
  "pydantic-settings>=2.4",
  "python-dotenv>=1.0"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
